--- a/paginaLince/src/fes/aragon/ico/fes/ventanaPrincipal.form
+++ b/paginaLince/src/fes/aragon/ico/fes/ventanaPrincipal.form
@@ -80,13 +80,12 @@
     <AuxValue name="FormSettings_listenerGenerationStyle" type="java.lang.Integer" value="0"/>
     <AuxValue name="FormSettings_variablesLocal" type="java.lang.Boolean" value="false"/>
     <AuxValue name="FormSettings_variablesModifier" type="java.lang.Integer" value="2"/>
-    <AuxValue name="designerSize" type="java.awt.Dimension" value="-84,-19,0,5,115,114,0,18,106,97,118,97,46,97,119,116,46,68,105,109,101,110,115,105,111,110,65,-114,-39,-41,-84,95,68,20,2,0,2,73,0,6,104,101,105,103,104,116,73,0,5,119,105,100,116,104,120,112,0,0,2,-107,0,0,3,-14"/>
   </AuxValues>
 
   <Layout>
     <DimensionLayout dim="0">
       <Group type="103" groupAlignment="0" attributes="0">
-          <Component id="jScrollPane1" min="-2" pref="1010" max="-2" attributes="0"/>
+          <Component id="jScrollPane1" min="-2" pref="939" max="-2" attributes="0"/>
       </Group>
     </DimensionLayout>
     <DimensionLayout dim="1">
@@ -107,12 +106,12 @@
           <Properties>
             <Property name="editable" type="boolean" value="false"/>
             <Property name="font" type="java.awt.Font" editor="org.netbeans.beaninfo.editors.FontEditor">
-              <Font name="Comic Sans MS" size="18" style="2"/>
+              <Font name="Comic Sans MS" size="14" style="2"/>
             </Property>
             <Property name="foreground" type="java.awt.Color" editor="org.netbeans.beaninfo.editors.ColorEditor">
               <Color blue="33" green="33" red="0" type="rgb"/>
             </Property>
-            <Property name="text" type="java.lang.String" value="INFORMACION:&#xa;&#xa;Para visualizar informacion acerca de estos apartados selecciona de la barra de menu &quot;Menu&quot;, te daremos una breve descripcion del contenido:&#xa;&#xa;:::&gt; Teoria Basica de Ingenieria de Software &lt;:::&#xa;&#xa;Aqui encontraras conceptos b&#xe1;sicos de la ingenieria del software como buen estudiante de ingenieria en computaci&#xf3;n deberias saberlo.&#xa;&#xa;:::&gt; SCRUM &lt;:::&#xa;&#xa;Aqui encontraras informacion concerniente a SCRUM que es una metodologia de desarrollo de software pero bueno para que te cuento investigalo por ti mismo y &#xa1;gracias a esto! pues tienes esta aplicacion.&#xa;&#xa;:::&gt; Informacion de desarrolladores &lt;:::&#xa;&#xa;Aqui encontraras informacion de estos gara&#xf1;ones de la computacionpra que nos invites unos drinks ya que no es facil dise&#xf1;ar estas chunches, pero bueno conoceras nuestros, nombres, e-mails, redes sociales, hobbies, telefonos, etc.&#xa;&#xa;:::&gt; Salir &lt;:::&#xa;&#xa;Si ya viste todo pues ni modo &#xa1;hasta la proxima!&#xa;"/>
+            <Property name="text" type="java.lang.String" value="INFORMACION:&#xa;&#xa;Para visualizar informacion acerca de estos apartados selecciona de la barra de menu &quot;Menu&quot;, te daremos una breve descripcion del contenido:&#xa;&#xa;:::&gt; Teoria Basica de Ingenieria de Software &lt;:::&#xa;&#xa;Aqui encontraras conceptos b&#xe1;sicos de la ingenieria del software &#xa;como buen estudiante de ingenieria en computaci&#xf3;n deberias saberlo.&#xa;&#xa;:::&gt; SCRUM &lt;:::&#xa;&#xa;Aqui encontraras informacion concerniente a SCRUM que es una metodologia de desarrollo de software &#xa;pero bueno para que te cuento investigalo por ti mismo y &#xa1;gracias a esto! pues tienes esta aplicacion.&#xa;&#xa;:::&gt; Informacion de desarrolladores &lt;:::&#xa;&#xa;Aqui encontraras informacion de estos gara&#xf1;ones de la computacion para que nos invites unos drinks &#xa;ya que no es facil dise&#xf1;ar estas chunches, pero bueno conoceras nuestros, nombres, e-mails, redes sociales, &#xa;hobbies, telefonos, etc.&#xa;&#xa;:::&gt; Salir &lt;:::&#xa;&#xa;Si ya viste todo pues ni modo &#xa1;hasta la proxima! y si no por lo menos danos un like&#xa;"/>
           </Properties>
         </Component>
       </SubComponents>
